--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,19 @@
 [project]
 name = "siomi"
-version = "0.0.1"
-description = "Multi-agent AI platform for sioma that can be used to search data, generate documents, graphics, process big data, and more."
+version = "0.1.0"
+description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
-    "bcrypt>=5.0.0",
-    "dotenv>=0.9.9",
-    "fastapi>=0.131.0",
     "langchain>=1.2.10",
-    "langgraph>=1.0.9",
-    "uvicorn>=0.41.0",
+    "langchain-openai>=1.1.10",
+    "pydantic>=2.12.5",
+    "pydantic-settings>=2.13.1",
+]
+
+
+[dependency-groups]
+dev = [
+    "pysonar>=1.3.0.4086",
+    "pytest>=9.0.2",
 ]
